Fix broken inputs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,7 +67,6 @@
 .canvas-menu {
   grid-column: 1;
   grid-row: 1;
-  justify-self: end;
   background-color: rgba(100, 100, 100, 0.7);
   padding: 16px;
 }
@@ -80,12 +79,10 @@
 
 .canvas-menu-footer {
   margin-top: auto;
-  display: flex;
-  justify-content: flex-end;
 }
 
 .canvas-menu-toggle {
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 0;
 }
